executable_semantics/testdata/undef2.golden
executable_semantics/testdata/undef2.6c:7: syntax error
EXIT CODE: 255
